# quickpython

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TASKS_041-045_SUMMARY.md
.github/workflows/: ci.yml  release.yml
examples/: 01_basics.py  02_types.py  03_control_flow.py  04_functions.py  05_lists.py  06_dicts.py  07_for_loops.py  08_break_continue.py  09_exceptions.py  10_iterator_safety.py  11_comprehensive.py  12_comparison_types.py  13_import_json.py  14_os_module.py  15_re_module.py  COVERAGE.md  README.md  arithmetic.py  async_sleep.py  break_continue.py  exceptions.py  factorial.py  fibonacci_expr.py  fibonacci_while.py  floats.py  for_loops.py  iterator_safety.py  lists_dicts.py  nested_for.py  pyq_embed.rs  simple_add.py  simple_nested.py  simple_range.py  strings.py  variables.py
quickpython-demo/: Cargo.toml
quickpython-demo/examples/: llm_chat.py
quickpython-demo/src/: main.rs
quickpython-demo/test/: test_llm_basic.py  test_llm_not_configured.py
quickpython-llm/: Cargo.toml
quickpython-llm/src/: lib.rs
spec/: README.md  api-design.md  architecture.md  async-await.md  cli-design.md  comparison-operators-fix.md  exception-system.md  file-formats.md  generators.md  import-system.md  language-spec.md  module-examples.md  quickjs-bytecode-analysis.md  quickjs-design-reference.md
src/: bytecode.rs  compiler.rs  context.rs  extension.rs  main.rs  serializer.rs  tests_pending.rs  value.rs  vm.rs
src/builtins/: asyncio.rs  json.rs  mod.rs  os.rs  re.rs
tasks/: 001-simple-expr.md  002-variables.md  003-functions.md  004-control-flow.md  005-cli-tool.md  006-strings-print.md  007-float.md  008-list-dict.md  009-for-loop.md  010-break-continue.md  011-exception-types.md  012-raise-statement.md  013-try-except.md  014-finally-iterator-check.md  015-vm-single-loop-refactor.md  016-comparison-types.md  017-import-json.md  018-os-module.md  019-re-module.md  020-llm-module.md  021-github-actions-ci.md  022-pyq-programmatic-api.md  023-unary-operators.md  024-modulo-operator.md  025-exception-hierarchy.md  026-fix-print-multiple-args.md  027-augmented-assignment.md  028-logical-operators.md  029-in-operator.md  030-string-methods.md  031-dict-get-method.md  032-tuple-unpacking.md  033-fstring-formatting.md  034-str-builtin.md  035-slicing.md  036-isinstance-builtin.md  037-list-comprehensions.md  038-async-await.md  039-fix-exception-tests.md  040-improve-test-coverage.md  (+6 more)
test/: test_extension_registration.py
