[workspace]
members = [
    ".",
    "quickpython-llm",
    "quickpython-demo",
]

[package]
name = "quickpython"
version = "0.1.0"
edition = "2024"

[lib]
name = "quickpython"
path = "src/main.rs"

[dependencies]
rustpython-parser = "0.4.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
