[workspace]
members = [
    ".",
    "quickpython-llm",
    "quickpython-demo",
]

[package]
name = "quickpython"
version = "0.1.1"
edition = "2024"
authors = ["VikingMew"]
description = "A lightweight Python bytecode VM written in Rust"
license = "MPL-2.0"
repository = "https://github.com/VikingMew/quickpython"
homepage = "https://github.com/VikingMew/quickpython"
documentation = "https://github.com/VikingMew/quickpython"
readme = "README.md"
keywords = ["python", "vm", "bytecode", "interpreter", "scripting"]
categories = ["parser-implementations", "embedded", "virtualization"]
exclude = [
    "examples/*",
    "test/*",
    "tasks/*",
    "spec/*",
    ".github/*",
    "quickpython-demo/*",
    "quickpython-llm/*",
]

[lib]
name = "quickpython"
path = "src/main.rs"

[dependencies]
rustpython-parser = "0.4.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
tokio = { version = "1", features = ["full"] }
