[package]
name = "quickpython"
version = "0.1.3"
edition = "2024"
authors = ["VikingMew"]
description = "A lightweight Python bytecode VM written in Rust"
license = "MPL-2.0"
repository = "https://github.com/VikingMew/quickpython"
homepage = "https://github.com/VikingMew/quickpython"
documentation = "https://github.com/VikingMew/quickpython"
readme = "README.md"
keywords = ["bytecode", "interpreter", "python", "scripting", "vm"]
categories = ["embedded", "parser-implementations", "virtualization"]
exclude = [
  ".github/*",
  "examples/*",
  "quickpython-demo/*",
  "quickpython-llm/*",
  "spec/*",
  "tasks/*",
  "test/*",
]

[workspace]
members = [
  ".",
  "quickpython-demo",
  "quickpython-llm",
]

[lib]
name = "quickpython"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
rustpython-parser = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
